# MPI-Uniform-Participation-Analyser

./: CMakeLists.txt  README.md  docs.py
src/: Analysis.cpp  Analysis.h  Data.h  Reporter.cpp  Reporter.h  main.cpp
test-build/: mismatched_tag.ll  uniform_comm.ll
tests/: mismatched_tag.c  uniform_comm.c
